# data-science-quiz-lab

./: README.md  pyproject.toml
data/sample/: questions_sample.json
notebooks/: 01_exploracao.ipynb
scripts/: download_data.py
src/: main.py
