[project]
name = "data-science-quiz-lab"
version = "0.1.0"
description = "JSON quiz lab for lists, dictionaries, randomization, scoring, and GitHub-friendly contributions."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alberto Mateus P. da Gama" }]

[tool.pytest.ini_options]
pythonpath = ["."]
